--- a/src/site/antora/modules/ROOT/pages/manual/installation.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/installation.adoc
@@ -175,9 +175,9 @@ h| Gradle
 The
 xref:manual/simple-logger.adoc[Simple Logger]
 implementation is embedded in the Log4j API and does not need any external dependency.
-
+It is intended as a convenience for environments where either a fully-fledged logging implementation is missing, or cannot be included for other reasons.
 Its usage is, however, opt-in and Log4j API will log an error to the
-xref:manual/status-logger.adoc[Status Logger]:
+xref:manual/status-logger.adoc[Status Logger] to avoid its unintentional usages:
 
 ----
 2024-10-03T11:53:34.281462230Z main ERROR Log4j API could not find a logging provider.
