--- a/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
@@ -423,8 +423,8 @@ This example cannot be configured using Java properties.
 [#JmsAppender]
 == JMS Appender
 
-The JMS Appender sends the formatted log event to a
-https://jakarta.ee/specifications/messaging/2.0/[Jakarta Messaging API]
+The JMS Appender sends a formatted log event to a
+https://jakarta.ee/specifications/messaging/3.0/[Jakarta] or https://jakarta.ee/specifications/messaging/2.0/[Javax] Messaging API
 destination.
 
 [IMPORTANT]
@@ -432,9 +432,11 @@ destination.
 As of Log4j `2.17.0` you need to enable the JMS Appender **explicitly** by setting the
 xref:manual/systemproperties.adoc#log4j2.enableJndiJms[`log4j2.enableJndiJms`]
 configuration property to `true`.
-
-Due to breaking changes in the underlying API, the JMS Appender cannot be used with Jakarta Messaging API 3.0 or later.
 ====
+
+For Jakarta, use the `JMS-Jakarta` element name in the `log4j-jakarta-jms` Maven module.
+
+For Javax, use the `JMS-Javax` element name; the names `JMS`, `JMSQueue`, and `JMSTopic` are provided for backward compatibility.
 
 [#JmsAppender-attributes]
 .JMS Appender configuration attributes
@@ -600,6 +602,8 @@ https://jakarta.ee/specifications/platform/8/apidocs/javax/jms/objectmessage[`Ob
 
 [#JmsAppender-examples]
 === Configuration examples
+
+In the examples below, to use Jakarta, replace `JMS` with `JMS-Jakarta`.
 
 Here is a sample JMS Appender configuration:
 
