--- a/src/site/antora/modules/ROOT/pages/manual/async.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/async.adoc
@@ -69,10 +69,10 @@ This is the simplest to configure and gives the best performance: to make all lo
 xref:manual/systemproperties.adoc#log4j.loggerContext.selector[`log4j.loggerContext.selector`]
 property to one of the asynchronous logger context selectors:
 
-link:../javadoc/log4j-async-logger/org/apache/logging/log4j/async/logger/BasicAsyncLoggerContextSelector.html[`org.apache.logging.log4j.core.async.BasicAsyncLoggerContextSelector`]::
+link:../javadoc/log4j-async-logger/org/apache/logging/log4j/async/logger/BasicAsyncLoggerContextSelector.html[`org.apache.logging.log4j.async.logger.BasicAsyncLoggerContextSelector`]::
 This will create a single logger context and disruptor for all the classes in the JVM,
 
-link:../javadoc/log4j-async-logger/org/apache/logging/log4j/async/logger/AsyncLoggerContextSelector.html[`org.apache.logging.log4j.core.async.AsyncLoggerContextSelector`]::
+link:../javadoc/log4j-async-logger/org/apache/logging/log4j/async/logger/AsyncLoggerContextSelector.html[`org.apache.logging.log4j.async.logger.AsyncLoggerContextSelector`]::
 This will create a different logger context and disruptor for each classloader in the JVM.
 
 [IMPORTANT]
