--- a/src/site/antora/modules/ROOT/pages/manual/lookups.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/lookups.adoc
@@ -966,7 +966,10 @@ include::partial$features/servlet-support.adoc[]
 [#third-party]
 == Third-party lookups
 
-The following additional lookups are available from third-party vendors:
+[IMPORTANT]
+====
+These lookups are provided by **third-party** vendors and are not maintained by the Apache Software Foundation.
+====
 
 [#KubernetesLookup]
 === Kubernetes Lookup
@@ -997,6 +1000,29 @@ for more details.
 ====
 The Spring Boot 3 Lookup conflicts with the <<#SpringBootLookup>>.
 If you are upgrading to Spring Boot 3, make sure to remove the latter from your classpath.
+====
+
+[#TomcatLookup]
+=== Tomcat Lookup
+
+[cols="1h,4"]
+|===
+| Syntax
+|
+`tomcat:<key>`
+
+where `key` is one of the
+https://oss.copernik.eu/tomcat/3.x/components/log4j-tomcat#TomcatLookup-keys[supported Tomcat Lookup keys]
+| Dependency | https://oss.copernik.eu/tomcat/3.x/components/log4j-tomcat#installation[`eu.copernik:log4j-tomcat`]
+|===
+
+The Tomcat Lookup allows retrieving the names of the currently active Tomcat engine, host and application context.
+See
+https://oss.copernik.eu/tomcat/3.x/components/log4j-tomcat#TomcatLookup[Copernik.eu Tomcat Lookup documentation] for more details.
+
+[TIP]
+====
+If you wish your custom lookup to appear on this page, use the ``[Edit]`` link at the top and submit a pull request.
 ====
 
 [#extending]
