Add references to Copernik.eu Log4j components (#3534)
This change adds references to the Log4j plugins from my personal "Extensions for Log4j and Tomcat" to the documentation.

Co-authored-by: Volkan Yazıcı <volkan@yazi.ci>

--- a/src/site/antora/modules/ROOT/pages/manual/lookups.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/lookups.adoc
@@ -966,7 +966,12 @@ include::partial$features/servlet-support.adoc[]
 [#third-party]
 == Third-party lookups
 
-The following additional lookups are available from third-party vendors:
+[IMPORTANT]
+====
+These lookups are provided by **third-party** vendors and are not maintained by the
+link:{logging-services-url}[Apache Logging Services]
+(Log4j, Log4cxx, Log4net) project.
+====
 
 [#KubernetesLookup]
 === Kubernetes Lookup
@@ -998,6 +1003,24 @@ for more details.
 The Spring Boot 3 Lookup conflicts with the <<#SpringBootLookup>>.
 If you are upgrading to Spring Boot 3, make sure to remove the latter from your classpath.
 ====
+
+[#TomcatLookup]
+=== Tomcat Lookup
+
+[cols="1h,4"]
+|===
+| Syntax
+|
+`tomcat:<key>`
+
+where `key` is one of the
+https://oss.copernik.eu/tomcat/3.x/components/log4j-tomcat#TomcatLookup-keys[supported Tomcat Lookup keys]
+| Dependency | https://oss.copernik.eu/tomcat/3.x/components/log4j-tomcat#installation[`eu.copernik:log4j-tomcat`]
+|===
+
+The Tomcat Lookup allows retrieving the names of the currently active Tomcat engine, host and application context.
+See
+https://oss.copernik.eu/tomcat/3.x/components/log4j-tomcat#TomcatLookup[Copernik.eu Tomcat Lookup documentation] for more details.
 
 [#extending]
 == Extending
