Update for code review comments and added documentation
Signed-off-by: MichaelMorris <michael.morris@est.tech>

--- a/src/site/antora/modules/ROOT/pages/manual/configuration.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/configuration.adoc
@@ -988,6 +988,69 @@ include::example$manual/configuration/routing.properties[tag=appender]
 Therefore, the dollar `$` sign needs to be escaped.
 <2> All the attributes of children of the `Route` element have a **deferred** evaluation. Therefore, they need only one `$` sign.
 
+[#monitorUris]
+== Monitor URIs
+
+Log4j can be configured to poll for changes to resources (in addition to the configuration file) using the `MonitorUris` element of the configuration. If a change is detected in any of the specifed resources, Log4j automatically reconfigures the logger context.
+
+The polling interval is determined by the value of the <<configuration-attribute-monitorInterval>> attribute. If set to 0, polling is disabled. See <<configuration-attribute-monitorInterval>> for further details. 
+
+This may be useful where the configuration is dependent on a resource that is external to the configuration file. 
+
+The MonitorUris component supports the following nested element: 
+
+[#MonitorUris-elements]
+[cols="1m,1,4"]
+|===
+| Type | Multiplicity | Description
+
+| `Uri`
+| one or more
+| Specifies the URI of a resouce to be polled for changes.
+|===
+
+The Uri component supports the following attribute:
+[#uri-attributes-name]
+=== `uri`
+
+[cols="1h,5"]
+|===
+| Type          | `String`
+|===
+
+See example below:
+
+[tabs]
+====
+XML::
++
+[source,xml]
+----
+include::example$manual/configuration/monitoruris.xml[lines=18..]
+----
+
+JSON::
++
+[source,json]
+----
+include::example$manual/configuration/monitoruris.json[]
+----
+
+YAML::
++
+[source,yaml]
+----
+include::example$manual/configuration/monitoruris.yaml[lines=17..]
+----
+
+Properties::
++
+[source,properties]
+----
+include::example$manual/configuration/monitoruris.properties[lines=18..]
+----
+====
+
 [id=arbiters]
 == [[Arbiters]] Arbiters
 
