Apply suggestions from code review

--- a/src/site/antora/modules/ROOT/pages/manual/appenders/database.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/appenders/database.adoc
@@ -818,7 +818,7 @@ for its format.
 **Required**
 
 | [[MongoDbProvider-attr-databaseName]]databaseName
-| 'string'
+| `string`
 |
 |
 It specifies the name of the database for the appender to use.
@@ -828,12 +828,12 @@ Overrides the value provided in the connection string if present.
 **Required**
 
 | [[MongoDbProvider-attr-collectionName]]collectionName
-| 'string'
+| `string`
 |
 |
 It specifies the name of the collection for the appender to use.
 For backward compatibility, the collection name can also be specified in the
-https://mongodb.github.io/mongo-java-driver/5.0/apidocs/mongodb-driver-core/com/mongodb/ConnectionString.html[Java-specific connection string]
+https://mongodb.github.io/mongo-java-driver/5.0/apidocs/mongodb-driver-core/com/mongodb/ConnectionString.html[Java-specific connection string].
 If collection name is specified in both places, the value provided here will be used.
 
 **Required**
