--- a/src/site/antora/modules/ROOT/pages/manual/pattern-layout.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/pattern-layout.adoc
@@ -952,6 +952,10 @@ See the table below for abbreviation examples:
 |org.apache.commons.Foo
 |o.a.c.Foo
 
+|%c{2.}
+|org.apache.commons.Foo
+|or.ap.co.Foo
+
 |%c{1.1.\~.~}
 |org.apache.commons.test.Foo
 |o.a.~.~.Foo
@@ -964,17 +968,29 @@ See the table below for abbreviation examples:
 |org.apache.commons.test.Foo
 |o.a.c.test.Foo
 
+|%c{3.2.1.*}
+|org.apache.commons.test.Foo
+|org.ap.c.test.Foo
+
 |%c{1.2.*}
+|org.apache.commons.test.Foo
+|o.ap.commons.test.Foo
+
+|%c{1.2*}
 |org.apache.commons.test.Foo
 |o.a.c.test.Foo
 
 |%c{1.3.*}
 |org.apache.commons.test.Foo
+|o.apa.commons.test.Foo
+
+|%c{1.3*}
+|org.apache.commons.test.Foo
 |o.a.commons.test.Foo
 
 |%c{1.8.*}
 |org.apache.commons.test.Foo
-|org.apache.commons.test.Foo
+|o.apache.commons.test.Foo
 |===
 
 [#converter-marker]
