--- a/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
+++ b/src/site/antora/modules/ROOT/pages/manual/appenders/message-queue.adoc
@@ -424,7 +424,7 @@ This example cannot be configured using Java properties.
 == JMS Appender
 
 The JMS Appender sends a formatted log event to a
-https://jakarta.ee/specifications/messaging/3.0/[Jakarta] or https://jakarta.ee/specifications/messaging/2.0/[Javax] Messaging API
+https://jakarta.ee/specifications/messaging/3.0/[Jakarta] or https://jakarta.ee/specifications/messaging/2.0/[Java] EE Messaging API
 destination.
 
 [IMPORTANT]
@@ -434,9 +434,38 @@ xref:manual/systemproperties.adoc#log4j2.enableJndiJms[`log4j2.enableJndiJms`]
 configuration property to `true`.
 ====
 
-For Jakarta, use the `JMS-Jakarta` element name in the `log4j-jakarta-jms` Maven module.
+[WARNING]
+=====
+Starting with Log4j `2.25.0`, the correct Appender element name depends on the version of Jakarta Messaging you are using:
 
-For Javax, use the `JMS-Javax` element name; the names `JMS`, `JMSQueue`, and `JMSTopic` are provided for backward compatibility.
+* **For Jakarta Messaging 3.0 or later**, use the `JMS-Jakarta` element name.
+This requires additional runtime dependencies:
++
+[tabs]
+====
+Maven::
++
+[source,xml,subs="+attributes"]
+----
+<dependency>
+  <groupId>org.apache.logging.log4j</groupId>
+  <artifactId>log4j-jakarta-jms</artifactId>
+  <version>{log4j-core-version}</version>
+</dependency>
+----
+
+Gradle::
++
+[source,groovy,subs="+attributes"]
+----
+runtimeOnly 'org.apache.logging.log4j:log4j-jakarta-jms:{log4j-core-version}'
+----
+====
+
+* **For Java Messaging or Jakarta Messaging 2.0**, use the `JMS-Javax` element name instead.
+
+The legacy element names `JMS`, `JMSQueue`, and `JMSTopic` are still supported for backward compatibility.
+=====
 
 [#JmsAppender-attributes]
 .JMS Appender configuration attributes
